--- a/examples/example.html
+++ b/examples/example.html
@@ -4,10 +4,10 @@
     <title>ES6 Project &mdash; Example</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="../build/es6-project.min.css" rel="stylesheet">
+    <link href="../build/es6-sample-project.min.css" rel="stylesheet">
   </head>
   <body>
-    <script src="../build/es6-project.min.js"></script>
+    <script src="../build/es6-sample-project.min.js"></script>
     <script>
       var example = new SampleProject();
 
